--- a/package.json
+++ b/package.json
@@ -19,5 +19,10 @@
   "bugs": {
     "url": "https://github.com/unadlib/assem/issues"
   },
-  "homepage": "https://github.com/unadlib/assem#readme"
+  "homepage": "https://github.com/unadlib/assem#readme",
+  "devDependencies": {
+    "babel-cli": "^6.26.0",
+    "babel-preset-env": "^1.6.1",
+    "babel-preset-stage-0": "^6.24.1"
+  }
 }
