--- a/package.json
+++ b/package.json
@@ -25,7 +25,5 @@
     "babel-preset-env": "^1.6.1",
     "babel-preset-stage-0": "^6.24.1"
   },
-  "dependencies": {
-    "redux": "^3.7.2"
-  }
+  "dependencies": {}
 }
